--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <!--keeps everything contained-->
         <h1>CSS TYPEFACE PROCESS</h1>
         <div class="break"></div>
-        <img class="i-img" src="images/inspo.jpg" alt="screen shot">
-        <img class="i-img" src="images/inspo2.jpg" alt="screen shot">
+        <img class="i-img" src="inspo.jpg" alt="screen shot">
+        <img class="i-img" src="inspo2.jpg" alt="screen shot">
         <div class="break"></div>
         <p> The geometric and consistent line width of the letters
             <br>in this design inspired my CSS typeface design.
@@ -33,9 +33,9 @@
         <div class="break"></div>
         <div class="break"></div>
         <div class="break"></div>
-        <img class="i-img" src="images/sketch1.jpg" alt="sketch">
-        <img class="i-img" src="images/sketch2.jpg" alt="sketch">
-        <img class="i-img" src="images/sketch3.jpg" alt="sketch">
+        <img class="i-img" src="sketch1.jpg" alt="sketch">
+        <img class="i-img" src="sketch2.jpg" alt="sketch">
+        <img class="i-img" src="sketch3.jpg" alt="sketch">
         <div class="break"></div>
         <p> Hand sketches of letters A–I
         </p>
@@ -68,7 +68,7 @@
         <div class="break"></div>
         <div class="break"></div>
         <div class="break"></div>
-        <img class="i-img" src="images/colour2.png" alt="graphic">
+        <img class="i-img" src="colour2.png" alt="graphic">
         <p> Used cyan, magenta, and yellow to resemble
             <br>the CMYK colour palette.
         </p>
